@@ -1,5 +1,7 @@
 0.7.8-beta to current
 
+	Added ga and gA keys to visual mode.  Thanks to geo909.
+
 	Highlight "highlight clear".
 
 	Returned accidentally lost "Merge all" (from message only) conflict
